Dando um pouco de identidade ao site

--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magias Dark Souls 2</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="imgs/Bonfire.png">
 </head>
 <body>
-    
+    <header>
+        <h1>Magias Dark Souls 2</h1>
+    </header>
+    <div class="magias_container">
+        <div class="card feiticos">
+            <img src="imgs/Mestre de Magia.png" alt="Mestre de Magia">
+            <h2><a href="feiticos.html" target="_blank">Feitiços</a></h2>
+        </div>
+
+        <div class="card milagres">
+            <img src="imgs/Mestre dos Milagres.png" alt="Mestre dos Milagres">
+            <h2><a href="milagres.html" target="_blank">Milagres</a></h2>
+        </div>
+
+        <div class="card piromancias">
+            <img src="imgs/Mestre da Chama Piromântica.png" alt="Mestre da Chama Piromântica">
+            <h2><a href="piromancias.html" target="_blank">Piromâncias</a></h2>
+        </div>
+
+        <div class="card   sortilegios">
+            <img src="imgs/Mestre dos Sortilégios.png" alt="Mestre dos Sortilégios">
+            <h2><a href="sortilegios.html" target="_blank">Sortilégios</a></h2>
+        </div>
+    </div>
 </body>
 </html>
