--- a/piromancias.html
+++ b/piromancias.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piromancias</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="imgs/Mestre da Chama Piromântica.png">
 </head>
 <body>
     
