Melhorando visual da pagina inicial

--- a/index.html
+++ b/index.html
@@ -11,26 +11,72 @@
     <header>
         <h1>Magias Dark Souls 2</h1>
     </header>
-    <div class="magias_container">
-        <div class="card feiticos">
-            <img src="imgs/Mestre de Magia.png" alt="Mestre de Magia">
-            <h2><a href="feiticos.html" target="_blank">Feitiços</a></h2>
-        </div>
 
-        <div class="card milagres">
-            <img src="imgs/Mestre dos Milagres.png" alt="Mestre dos Milagres">
-            <h2><a href="milagres.html" target="_blank">Milagres</a></h2>
-        </div>
+    <main class="layout-principal">
+        
+        <aside class="sidebar navegacao">
+            <h3>Navegação</h3>
+            <ul>
+                <li><a href="index.html" target="_blank">Início</a></li>
+                <li><a href="feiticos.html" target="_blank">Feitiços</a></li>
+                <li><a href="milagres.html" target="_blank">Milagres</a></li>
+                <li><a href="piromancias.html" target="_blank">Piromâncias</a></li>
+                <li><a href="sortilegios.html" target="_blank">Sortilégios</a></li>
+            </ul>
+        </aside>
 
-        <div class="card piromancias">
-            <img src="imgs/Mestre da Chama Piromântica.png" alt="Mestre da Chama Piromântica">
-            <h2><a href="piromancias.html" target="_blank">Piromâncias</a></h2>
-        </div>
+        <aside class="sidebar curiosidades">
+            <h3>Curiosidades</h3>
+            <p>
+                O jogo Dark Souls 2 é conhecido por sua dificuldade desafiadora e atmosfera sombria, o que torna a escolha das magias uma parte crucial da estratégia do jogador.<br><br>
 
-        <div class="card   sortilegios">
-            <img src="imgs/Mestre dos Sortilégios.png" alt="Mestre dos Sortilégios">
-            <h2><a href="sortilegios.html" target="_blank">Sortilégios</a></h2>
-        </div>
+                As magias em Dark Souls 2 são divididas em quatro categorias principais: <strong style="color: #74ACDF;">Feitiços</strong>, <strong style="color: #DEB371;">Milagres</strong>, <strong style="color: #FF4500;">Piromâncias</strong> e <strong style="color: #8A2BE2;">Sortilégios</strong>, cada uma com suas próprias características e usos específicos.<br><br>
+
+                Os jogadores podem combinar diferentes tipos de magias para criar estratégias únicas e adaptáveis às diversas situações encontradas no jogo.
+            </p>
+        </aside>
+
+        <section class="conteudo-central">
+            <div class="inicio">
+                <p>
+                    A seguir você encontrará as categorias de magias disponíveis no jogo Dark Souls 2.<br><br>
+
+                    Esse site tem como objetivo fornecer informações detalhadas sobre cada tipo de magia. Como as descrições, efeitos, requisitos para utilizar cada uma delas, animações e descrição de como adquirir cada uma delas.<br><br>
+
+                    Espero que com o auxilio deste site, você consiga montar sua build de maneira mais eficiente, e também auxiliar nas conquistas que requerem possuir todas as magias de cada uma das categorias abaixo.
+                </p>
+            </div>
+
+            <div class="magias_container">
+                <div class="card feiticos">
+                    <img src="imgs/Mestre de Magia.png" alt="Mestre de Magia">
+                    <h2><a href="feiticos.html" target="_blank">Feitiços</a></h2>
+                </div>
+
+                <div class="card milagres">
+                    <img src="imgs/Mestre dos Milagres.png" alt="Mestre dos Milagres">
+                    <h2><a href="milagres.html" target="_blank">Milagres</a></h2>
+                </div>
+
+                <div class="card piromancias">
+                    <img src="imgs/Mestre da Chama Piromântica.png" alt="Mestre da Chama Piromântica">
+                    <h2><a href="piromancias.html" target="_blank">Piromâncias</a></h2>
+                </div>
+
+                <div class="card sortilegios">
+                    <img src="imgs/Mestre dos Sortilégios.png" alt="Mestre dos Sortilégios">
+                    <h2><a href="sortilegios.html" target="_blank">Sortilégios</a></h2>
+                </div>
+            </div>
+        </section>
+    </main>
+    <div class="sidebar-redes-sociais">
+
+        <a href="https://github.com/Wjdups4964" target="_blank">
+        <img src="imgs/github.png" alt="GitHub"></a>
+
+        <a href="https://www.linkedin.com/in/jos%C3%A9-victor-9a107a268/" target="_blank">
+        <img src="imgs/linkedin.png" alt="LinkedIn"></a>
     </div>
 </body>
 </html>
